--- a/.gitignore
+++ b/.gitignore
@@ -5,18 +5,46 @@
 /logs
 /tmp
 /public
-/src
 /test
-/tsconfig.json
 /tsconfig.app.json
 
 .env.local
 .env
-.env.development
-.env.production
-.env.test
-.env.development.local
-.env.production.local
-.env.test.local
-.env.development.local.example
-.env.production.local.example
+
+.env.*
+!.env.example
+
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+.next/
+out/
+.vscode/
+.idea/
+.DS_Store
+
+.cache/
+.next/cache/
+npm-cache/
+yarn-cache/
+.pnpm-store/
+
+coverage/
+jest-coverage/
+
+Thumbs.db
+ehthumbs.db
+*.swp
+
+uploads/
+*.tmp
+
+*.local
+*.sublime-workspace
+*.sublime-project
+
+data/
+db/
